tagger overlay input box styling revised. #look overflow issue resolved

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,7 +127,7 @@ a:visited {
 
 #nav #currentPage {
   color: #323232;
-  
+
 
 
 }
@@ -418,7 +418,6 @@ h1, h2 {
 }
 
 #look {
-	border:3px blue solid;
 	position:relative;
 	margin:auto;
 	left:0;
