--- a/public/stylesheets/taggerPut.css
+++ b/public/stylesheets/taggerPut.css
@@ -1,9 +1,6 @@
 #look{
   left:0;
   right:0;
-  height:500px;
-  border:0px transparent solid;
- 
 }
 
 h2 {
@@ -11,7 +8,9 @@ h2 {
 }
 
 .look-container{
-
+width:100%;
+padding-bottom:20px;
+overflow:hidden;
 }
 
 .save_button {
@@ -82,6 +81,8 @@ h2 {
   display:block;
   left:0;
   right:0;
+
+
 }
 
 .tags{
@@ -95,9 +96,16 @@ h2 {
   position:absolute;
   display:block;
   z-index: 4;
-  background-color: #DA7E68;
+  background-color: rgba(218,126,104,0.8);
+  border-top-left-radius:0px;
+border-top-right-radius:8px;
+border-bottom-right-radius:8px;
+border-bottom-left-radius:5px;
   padding: 5px;
   text-align: center;
+  -webkit-box-shadow: 0px 0px 6px rgba(50, 50, 50, 0.75);
+-moz-box-shadow: 0px 0px 6px rgba(50, 50, 50, 0.75);
+box-shadow: 0px 0px 6px rgba(50, 50, 50, 0.75);
 }
 
 #overlay .tagger_input {
